--- a/app/tabs/balance/send/send.component.html
+++ b/app/tabs/balance/send/send.component.html
@@ -38,7 +38,7 @@
             <StackLayout class="body-container" orientation="vertical">
                 <Label class="font-italic p-b-15 huge-label" [text]="'Balance: ' + balance"></Label>
                 <StackLayout class="hr-light"></StackLayout>
-                <GridLayout class="text-left m-t-10 m-b-10" columns="auto, auto, auto" rows="auto, auto, auto">
+                <GridLayout class="text-left m-t-10 m-b-10" columns="auto, auto, *" rows="auto, auto, auto">
                     <Label col="0" row="0" class="p-t-5 p-b-5 fa" text="&#xf2bc; Recipient:"></Label>
                     <Label col="1" row="0" colspan="2" class="p-t-5 p-b-5 p-l-5 fa" [text]="recipient"></Label>
 
@@ -48,7 +48,7 @@
                     <Label col="0" row="2" class="p-t-5 p-b-5 fa" text="&#xf0ec; Fee:"></Label>
                     <Label col="1" row="2" class="p-t-5 p-b-5 p-l-5 fa" [text]="fee"></Label>
 
-                    <Label col="2" row="1" rowspan="2" style="vertical-align:middle" class="p-5" [text]="'= ' + marketService.getPriceFiatCurrency(amount + fee)"></Label>
+                    <Label col="2" row="1" rowspan="2" style="vertical-align:middle" class="p-5 p-l-15" [text]="'= ' + marketService.getPriceFiatCurrency(amount + fee)"></Label>
                 </GridLayout>
                 <StackLayout class="hr-light"></StackLayout>
             </StackLayout>
